--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -75,7 +75,7 @@ jobs:
       uses: actions/checkout@v3
     
     - name: clone code
-      run: git clone https://${{ secrets.PAGES_ADDR }}
+      run: git clone https://github.com/zhangqhai/zhangqhai.github.io.git
       
     - name: rewrite index.html
       run: rm zhangqhai.github.io/index.html & cat index.html > zhangqhai.github.io/index.html
@@ -84,7 +84,7 @@ jobs:
       run: cd zhangqhai.github.io
       
     - name: set git info
-      run: sudo git config user.name "zhangqhai" & sudo git config user.email  ${{ secrets.MY_EMAIL }}
+      run: sudo git config user.name "zhangqhai" & sudo git config user.email  zqh1017@foxmail.com
       
     - name: git add
       run: git status & git add ./
@@ -93,4 +93,6 @@ jobs:
       run: git commit -m 'update index.html' ./
       
     - name: push
-      run: git push https://zhangqhai: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@github.com/zhangqhai/zhangqhai.github.io.git main
+      run: git push https://zhangqhai:$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git main
+      env: 
+        GITHUB_TOKEN: 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
