--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -77,11 +77,6 @@ jobs:
     - name: clone code
       run: git clone https://github.com/zhangqhai/zhangqhai.github.io.git
       
-    - name: rewrite index.html
-      run: |
-        cat index.html > zhangqhai.github.io/index.html
-        cat zhangqhai.github.io/index.html
-      
     - name: change dir
       run: |
         cd zhangqhai.github.io
@@ -93,9 +88,15 @@ jobs:
         sudo git config user.email  "zqh1017@foxmail.com"
         sudo git config --global github.user zhangqhai
         sudo git config --global github.token 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
-      
-    #- name: git add
-    #  run: git status & git add ./
+    
+    - name: rewrite index.html
+      run: |
+        rm zhangqhai.github.io/index.html
+        cat index.html > zhangqhai.github.io/index.html
+        cat zhangqhai.github.io/index.html
+    
+    - name: git add
+      run: git status & git add ./
       
     - name: git commit
       run: git commit -m 'update index.html' ./
