--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -82,15 +82,6 @@ jobs:
         cd zhangqhai.github.io
         ls -l
       
-    - name: set git info
-      run: |
-        cd zhangqhai.github.io
-        sudo git config user.name "zhangqhai" 
-        sudo git config user.email  "zqh1017@foxmail.com"
-        sudo git config --global github.user zhangqhai
-        sudo git config --global github.token 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
-    
-  
     - name: rewrite index.html
       run: |
         cd zhangqhai.github.io
@@ -101,19 +92,17 @@ jobs:
     - name: git add
       run: |
         cd zhangqhai.github.io
+        ls -l
+        sudo git config user.name "zhangqhai" 
+        sudo git config user.email  "zqh1017@foxmail.com"
+        sudo git config --global github.user zhangqhai
+        sudo git config --global github.token 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
         git status 
         git add ./
-        ls -l
-      
-    - name: git commit
-      run: | 
         cd zhangqhai.github.io
         git commit -m 'update index.html' ./
-      
-    - name: push
-      run: |
-        cd zhangqhai.github.io
-        git remote set-url origin https://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@github.com/zhangqhai/zhangqhai.github.io.git
+        git remote add origin https://zhangqhai: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@github.com/zhangqhai/zhangqhai.github.io.git
         git push https://zhangqhai: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@github.com/zhangqhai/zhangqhai.github.io.git main
       env: 
         GITHUB_TOKEN: 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
+        
