--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -97,11 +97,12 @@ jobs:
         sudo git config user.email  "zqh1017@foxmail.com"
         sudo git config --global github.user zhangqhai
         sudo git config --global github.token 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
+        git remote add publish https://zhangqhai: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@github.com/zhangqhai/zhangqhai.github.io.git
+        git check --orphan publish
         git status 
         git add ./
         git commit -m 'update index.html' ./
-        git remote set-url origin https://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@github.com/zhangqhai/zhangqhai.github.io.git
-        git push
+        git push --force https://zhangqhai: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@github.com/zhangqhai/zhangqhai.github.io.git publist:main
       env: 
         GITHUB_TOKEN: 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
         
