--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -98,7 +98,7 @@ jobs:
         sudo git config --global github.user zhangqhai
         sudo git config --global github.token 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
         git remote add publish https://zhangqhai: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@github.com/zhangqhai/zhangqhai.github.io.git
-        git check --orphan publish
+        git checkout --orphan publish
         git status 
         git add ./
         git commit -m 'update index.html' ./
