--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -96,13 +96,14 @@ jobs:
         sudo git config user.name "zhangqhai" 
         sudo git config user.email  "zqh1017@foxmail.com"
         sudo git config --global github.user zhangqhai
-        sudo git config --global github.token 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
-        git remote add publish https://zhangqhai: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@github.com/zhangqhai/zhangqhai.github.io.git
+        sudo git config --global github.token $GITHUB_TOKEN
+        git remote add publish https://zhangqhai:$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git
         git checkout --orphan publish
         git status 
         git add ./
         git commit -m 'update index.html' ./
-        git push --force https://zhangqhai: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@github.com/zhangqhai/zhangqhai.github.io.git publish:main
+        git config -l | grep 'http\..*\.extraheader' | cut -d= -f1 | xargs -L1 git config --unset-all
+        git push --force https://zhangqhai:$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git publish:main
       env: 
-        GITHUB_TOKEN: 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
+        GITHUB_TOKEN: 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
         
