--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -88,12 +88,11 @@ jobs:
         sudo git config user.email  "zqh1017@foxmail.com"
         sudo git config --global github.user zhangqhai
         sudo git config --global github.token $GITHUB_TOKEN
-        git remote add publish https://zhangqhai:$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git
-        git checkout --orphan publish
+        git remote add publish https://zhangqhai:$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai/zhangqhai.github.io.git
         git status 
         git add ./
         git commit -m 'update index.html' ./
-        git push --force https://zhangqhai:$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git publish:main
+        git push publish:main
       env: 
         GITHUB_TOKEN: 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
         
