--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -88,11 +88,10 @@ jobs:
         sudo git config user.email  "zqh1017@foxmail.com"
         sudo git config --global github.user zhangqhai
         sudo git config --global github.token $GITHUB_TOKEN
-        git remote add publish https://zhangqhai:$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai/zhangqhai.github.io.git
         git status 
         git add ./
         git commit -m 'update index.html' ./
-        git push publish:main
+        git push https://zhangqhai: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@github.com/zhangqhai/zhangqhai.github.io.git main
       env: 
         GITHUB_TOKEN: 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
         
