--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -91,7 +91,7 @@ jobs:
         git status 
         git add ./
         git commit -m 'update index.html' ./
-        git push https://zhangqhai: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@github.com/zhangqhai/zhangqhai.github.io.git main
+        git push https://$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git main
       env: 
-        GITHUB_TOKEN: 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
+        GITHUB_TOKEN: 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
         
