--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -91,7 +91,9 @@ jobs:
         git status 
         git add ./
         git commit -m 'update index.html' ./
-        git push https://zhangqhai:$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git main
+        git remote remove origin
+        git remote add origin https://$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git
+        git push
       env: 
         GITHUB_TOKEN: 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
         
