--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -93,7 +93,7 @@ jobs:
         git commit -m 'update index.html' ./
         git remote remove origin
         git remote add origin https://$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git
-        git push
+        git push --set-upstream origin main
       env: 
         GITHUB_TOKEN: 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
         
