--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -92,7 +92,7 @@ jobs:
         git add ./
         git commit -m 'update index.html' ./
         git remote remove origin
-        git remote add origin https://$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git
+        git remote add origin https://zhangqhai:$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git
         git push --set-upstream origin main
       env: 
         GITHUB_TOKEN: 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
