--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -92,9 +92,10 @@ jobs:
         git add ./
         git commit -m 'update index.html' ./
         git remote remove origin
-        git remote add origin https://$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git
+        git remote add origin https://github.com/zhangqhai/zhangqhai.github.io.git
+        git remote set-url origin https://$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git
         date
-        git push --set-upstream origin main
+        git push -u origin/main
       env: 
         GITHUB_TOKEN: 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
         
