--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -95,7 +95,7 @@ jobs:
         # git remote set-url origin https://$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git
         # git config http.sslVerify "false"
         date
-        git push # -u origin:main
+        # git push # -u origin:main
         git clone https://github.com/zhangqhai/note.git
       env: 
         GITHUB_TOKEN: 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
