--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -91,10 +91,9 @@ jobs:
         git status 
         git add ./
         git commit -m 'update index.html' ./
-        git remote set-url origin https://$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git
-        git config http.sslVerify "false"
+        git remote set-url origin https://zhangqhai:$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git
         date
-        git push
+        git push origin:main
       env: 
         GITHUB_TOKEN: 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
         
