--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -76,7 +76,7 @@ jobs:
       
     - name: git add
       run: |
-        git clone https://github.com/zhangqhai/zhangqhai.github.io.git
+        git clone https://zqh1017%40foxmail.com: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@github.com/zhangqhai/zhangqhai.github.io.git
         ls -l
         cd zhangqhai.github.io
         rm index.html
@@ -86,14 +86,11 @@ jobs:
         git --version
         sudo git config user.name "zhangqhai" 
         sudo git config user.email  "zqh1017@foxmail.com"
-        sudo git config --global github.user zhangqhai
-        sudo git config --global github.token $GITHUB_TOKEN
         git status 
         git add ./
         git commit -m 'update index.html' ./
-        git remote set-url origin https://zhangqhai:$GITHUB_TOKEN@github.com/zhangqhai/zhangqhai.github.io.git
         date
-        git push origin:main
+        git push
       env: 
         GITHUB_TOKEN: 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
         
