--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -76,7 +76,7 @@ jobs:
       
     - name: git add
       run: |
-        git clone https://zqh1017%40foxmail.com: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@github.com/zhangqhai/zhangqhai.github.io.git
+        git clone https://zqh1017%40foxmail.com:${{ secrets.T1 }}@github.com/zhangqhai/zhangqhai.github.io.git
         ls -l
         cd zhangqhai.github.io
         rm index.html
@@ -90,7 +90,7 @@ jobs:
         git add ./
         git commit -m 'update index.html' ./
         date
-        git push https://zqh1017%40foxmail.com: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@github.com/zhangqhai/note.git main
+        git push https://zqh1017%40foxmail.com:${{ secrets.T1 }}@github.com/zhangqhai/note.git main
       env: 
-        GITHUB_TOKEN: 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
+        GITHUB_TOKEN: ${{ secrets.T1 }}
         
