--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -21,16 +21,12 @@ jobs:
         go-version: '1.18.0-rc.1'
     - run: go version
     
-    - name: install JDK
+    - name: Install JDK and print java&maven version
       uses: actions/setup-java@v3
       with: 
         distribution: 'temurin'
         java-version: '11'
-        
-    - name: Print java version and maven version
-      run: |
-        java -version 
-        mvn -v
+    - run: java -version & mvn -v
       
     - name: checkout
       uses: actions/checkout@v3
