--- a/.github/workflows/demo1.yml
+++ b/.github/workflows/demo1.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Upload artifact
       uses: actions/upload-artifact@main
       with:
-        name: github-pages
+        name: println.ext
         path: ./println.exe
   
   
