--- a/.github/workflows/demo3.yml
+++ b/.github/workflows/demo3.yml
@@ -17,4 +17,7 @@ jobs:
         uses: actions/checkout@v3
       - run: |
           echo ${{ github.head_ref }}
+          echo ${{ github.action_ref }}
+          echo ${{ github.base_ref }}
+          echo ${{ github.ref }}
           javac Demo.java
