--- a/.github/workflows/demo3.yml
+++ b/.github/workflows/demo3.yml
@@ -20,4 +20,5 @@ jobs:
           echo ${{ github.action_ref }}
           echo ${{ github.base_ref }}
           echo ${{ github.ref }}
+          echo ${{ github.event.pull_request.base.sha }}
           javac Demo.java
