--- a/.github/workflows/demo3.yml
+++ b/.github/workflows/demo3.yml
@@ -21,4 +21,5 @@ jobs:
           echo ${{ github.base_ref }}
           echo ${{ github.ref }}
           echo ${{ github.event.pull_request.base.sha }}
+          echo ${{ github.event.pull_request }}
           javac Demo.java
