--- a/.github/workflows/demo3.yml
+++ b/.github/workflows/demo3.yml
@@ -16,4 +16,5 @@ jobs:
       - name: Compile check
         uses: actions/checkout@v3
       - run: |
+          git branch
           javac Demo.java
