--- a/.github/workflows/demo3.yml
+++ b/.github/workflows/demo3.yml
@@ -17,4 +17,5 @@ jobs:
         uses: actions/checkout@v3
       - run: |
           git branch
+          echo '----------------------------'
           javac Demo.java
